PATCH /person/{id}
